--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,8 @@ main {
 
 h2 {
     font-size: 24px;
-    margin-bottom: 10px;
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
 }
 
 p {
