--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
-
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #E1E5EE;
+    background-color: #2A324B;
     color: #2A324B;
     text-align: center;
     margin: 0;
@@ -9,7 +8,11 @@ body {
 }
 
 header {
+    background-color: #58699D;
     padding: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: white;
 }
 
 nav {
