--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,8 @@ nav button {
 }
 
 nav button.active {
-    background-color: #FFF;
+    background-color: #E1E5EE;
     color: #2A324B;
-    font-weight: bold;
 }
 
 main {
