--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #2A324B;
+    background-color: #E1E5EE;
     color: #2A324B;
     text-align: center;
     margin: 0;
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #58699D;
+    background-color: #FFF;
     padding: 20px;
     font-size: 24px;
     font-weight: bold;
@@ -19,21 +19,21 @@ nav {
     display: flex;
     justify-content: center;
     background-color: #2A324B;
-    padding: 10px;
+    padding: 15px;
 }
 
 nav button {
     background-color: #58699D;
     color: #FFF;
     border: none;
-    padding: 10px 15px;
+    padding: 12px 18px;
     margin: 0 5px;
     font-size: 16px;
     cursor: pointer;
 }
 
 nav button.active {
-    background-color: #E1E5EE;
+    background-color: #FFF;
     color: #2A324B;
     font-weight: bold;
 }
@@ -52,7 +52,7 @@ main {
     color: #2A324B;
     width: 60%;
     padding: 20px;
-    margin: 10px auto;
+    margin: 40px auto;
     border-radius: 5px;
     text-align: left;
 }
@@ -71,10 +71,11 @@ p {
 ul {
     list-style-type: none;
     padding: 0;
+    text-align: left;
 }
 
 ul li {
-    margin: 5px 0;
+    margin: 8px 0;
 }
 
 ul li a {
