--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #FFF;
+    background-color: #E1E5EE; 
     color: #2A324B;
     text-align: center;
     margin: 0;
@@ -26,14 +26,15 @@ nav button {
     background-color: #2A324B;
     color: #FFF;
     border: none;
+    min-width: 150px;
     padding: 12px 18px;
-    margin: 0 5px;
+    margin: 0 8px;
     font-size: 16px;
     cursor: pointer;
 }
 
 nav button.active {
-    background-color: #FFF;
+    background-color: white; 
     color: #2A324B;
     font-weight: bold;
 }
@@ -60,7 +61,6 @@ main {
 h2 {
     font-size: 28px;
     font-weight: 700;
-    font-family: 'Montserrat', sans-serif;
 }
 
 p {
