--- a/styles.css
+++ b/styles.css
@@ -14,41 +14,45 @@ header {
 main {
     background-color: #FFF;
     width: 80%;
-    margin: 60px auto 20px; 
-    padding: 0; 
+    margin: 0 auto; 
+    padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden; 
+    position: relative;
+    top: -10px; 
 }
 
 nav {
     display: flex;
-    justify-content: left; 
-    background-color: #E1E5EE; 
-    padding: 10px 15px;
-    border-radius: 10px 10px 0 0; 
+    justify-content: flex-start;
+    background-color: #2A324B;
+    padding: 10px;
+    width: 80%; 
+    margin: 0 auto; 
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px;
 }
 
 nav button {
-    background-color: #2A324B;
+    background-color: #58699D;
     color: #FFF;
     border: none;
-    padding: 12px 20px;
-    margin: 0 5px;
+    padding: 10px 15px;
+    margin: 0;
     font-size: 16px;
-    font-weight: bold;
     cursor: pointer;
-    border-radius: 4px 4px 0 0; 
+    flex: 1; 
+    max-width: 150px; 
 }
 
 nav button.active {
-    background-color: #FFF; 
-    color: #2A324B; 
+    background-color: #FFF;
+    color: #2A324B;
     font-weight: bold;
 }
-
 #resource-container {
     padding: 30px; 
+    margin-top: -10px;
     text-align: left;
 }
 
