--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ nav {
 }
 
 nav button {
-    background-color: #58699D;
+    background-color: #2A324B;
     color: #FFF;
     border: none;
     padding: 10px 15px;
