--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,12 @@ body {
     padding: 0;
 }
 
-
-header {
-    display: none;
-}
-
-main {
-    background-color: #2A324B;
+.content-wrapper {
+    background-color: #2A324B; 
     width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-    top: -10px;
+    margin: 50px auto; 
+    border-radius: 10px; 
+    padding-bottom: 20px; 
 }
 
 nav {
@@ -28,14 +20,13 @@ nav {
     justify-content: flex-start;
     background-color: #2A324B;
     padding: 10px;
-    width: 80%; 
-    margin: 0 auto; 
-    border-top-left-radius: 10px; 
+    width: 100%;
+    border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
 nav button {
-    background-color: #2A324B;
+    background-color: #58699D; 
     color: #FFF;
     border: none;
     padding: 10px 15px;
@@ -52,12 +43,18 @@ nav button.active {
     font-weight: bold;
 }
 
-#resource-container {
+
+main {
     background-color: #FFF; 
-    padding: 30px;
-    margin-top: -10px;
-    text-align: left;
+    width: 100%; 
+    padding: 20px;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#resource-container {
+    text-align: left;
+    padding: 30px;
 }
 
 h2 {
@@ -82,7 +79,7 @@ ul li {
 
 ul li a {
     text-decoration: none;
-    color: #2A324B;
+    color: #58699D;
     font-weight: bold;
 }
 
