--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,14 @@ nav {
     justify-content: flex-start;
     background-color: #2A324B;
     padding: 10px;
-    width: 100%;
+    width: 80%; 
+    margin: 0 auto; 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
 nav button {
-    background-color: #58699D; 
+    background-color: #2A324B;
     color: #FFF;
     border: none;
     padding: 10px 15px;
@@ -38,7 +39,7 @@ nav button {
 }
 
 nav button.active {
-    background-color: #FFF;
+    background-color: #FFF; 
     color: #2A324B;
     font-weight: bold;
 }
@@ -46,15 +47,20 @@ nav button.active {
 
 main {
     background-color: #FFF; 
-    width: 100%; 
-    padding: 20px;
+    width: 80%;
+    margin: 0 auto;
+    padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -10px;
 }
 
 #resource-container {
-    text-align: left;
+    background-color: #FFF; 
     padding: 30px;
+    text-align: left;
+    border-radius: 10px;
 }
 
 h2 {
