--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,10 @@ body {
     padding: 0;
 }
 
-.content-wrapper {
-    background-color: #2A324B; 
+section {
     width: 80%;
-    margin: 50px auto; 
-    border-radius: 10px; 
-    padding-bottom: 20px; 
+    margin: 50px auto;
+    padding-bottom: 20px;
 }
 
 nav {
@@ -20,12 +18,9 @@ nav {
     justify-content: flex-start;
     background-color: #2A324B;
     padding: 10px;
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    position: relative;
-    top: 0; 
 }
 
 nav button {
@@ -38,7 +33,7 @@ nav button {
     cursor: pointer;
     flex: 1;
     max-width: 150px;
-    transition: background 0.3s ease; 
+    transition: background 0.3s ease;
 }
 
 nav button.active {
@@ -47,20 +42,16 @@ nav button.active {
     font-weight: bold;
 }
 
-
 main {
     background-color: #FFF;
-    width: 80%;
-    margin: 0 auto;
+    width: 100%;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-    top: -10px;
 }
 
 #resource-container {
-    background-color: #FFF; 
+    background-color: #FFF;
     padding: 30px;
     text-align: left;
     border-radius: 10px;
