--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,12 @@ body {
     padding: 0;
 }
 
-section {
+.content-wrapper {
+    background-color: #2A324B; 
     width: 80%;
-    margin: 50px auto;
-    padding-bottom: 20px;
+    margin: 50px auto; 
+    border-radius: 10px; 
+    padding-bottom: 20px; 
 }
 
 nav {
@@ -18,7 +20,8 @@ nav {
     justify-content: flex-start;
     background-color: #2A324B;
     padding: 10px;
-    width: 100%;
+    width: 80%; 
+    margin: 0 auto; 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -31,27 +34,30 @@ nav button {
     margin: 0;
     font-size: 16px;
     cursor: pointer;
-    flex: 1;
-    max-width: 150px;
-    transition: background 0.3s ease;
+    flex: 1; 
+    max-width: 150px; 
 }
 
 nav button.active {
-    background-color: #FFF;
+    background-color: #FFF; 
     color: #2A324B;
     font-weight: bold;
 }
 
+
 main {
-    background-color: #FFF;
-    width: 100%;
+    background-color: #FFF; 
+    width: 80%;
+    margin: 0 auto;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -10px;
 }
 
 #resource-container {
-    background-color: #FFF;
+    background-color: #FFF; 
     padding: 30px;
     text-align: left;
     border-radius: 10px;
