--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,9 @@ body {
     padding: 0;
 }
 
-.content-wrapper {
-    background-color: #2A324B; 
+.wrapper {
     width: 80%;
-    margin: 50px auto; 
-    border-radius: 10px; 
-    padding-bottom: 20px; 
+    margin: 50px auto;
 }
 
 nav {
@@ -20,8 +17,6 @@ nav {
     justify-content: flex-start;
     background-color: #2A324B;
     padding: 10px;
-    width: 80%; 
-    margin: 0 auto; 
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
@@ -34,39 +29,31 @@ nav button {
     margin: 0;
     font-size: 16px;
     cursor: pointer;
-    flex: 1; 
-    max-width: 150px; 
+    flex: 1;
+    max-width: 150px;
 }
 
 nav button.active {
-    background-color: #FFF; 
+    background-color: #FFF;
     color: #2A324B;
     font-weight: bold;
 }
 
-
 main {
-    background-color: #FFF; 
-    width: 80%;
-    margin: 0 auto;
+    background-color: #FFF;
+    width: 100%;
     padding: 30px;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px; 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    position: relative;
-    top: -10px;
 }
 
 #resource-container {
-    background-color: #FFF; 
-    padding: 30px;
     text-align: left;
-    border-radius: 10px;
 }
 
 h2 {
     font-size: 24px;
     font-weight: 700;
-    font-family: 'Montserrat', sans-serif;
 }
 
 p {
