--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,21 @@ body {
     margin: 50px auto; 
     border-radius: 10px; 
     padding-bottom: 20px;  
-    padding-top: 10px;  
 }
 
 nav {
     display: flex;
     justify-content: flex-start;
-    background-color: #2A324B;
+    background-color: #58699D; 
     padding: 10px;
-    width: 100%; 
+    width: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
 
+
 nav button {
-    background-color: #58699D;
+    background-color: #58699D; 
     color: #FFF;
     border: none;
     padding: 10px 15px;
@@ -46,11 +46,11 @@ nav button.active {
 
 main {
     background-color: #FFF; 
-    width: 100%;
+    width: 90%;
+    margin: 20px auto;
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: -10px; 
 }
 
 #resource-container {
