--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,13 @@ nav button {
     color: #FFF;
     border: none;
     padding: 10px 15px;
-    margin: 0;
+    margin: 0 5px; 
     font-size: 16px;
     cursor: pointer;
-    flex: 1; 
-    max-width: 150px; 
+    flex: 1;
+    max-width: 150px;
 }
+
 
 nav button.active {
     background-color: #FFF; 
