--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
+    height: 100vh;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
 }
 
 .content-wrapper {
