--- a/styles.css
+++ b/styles.css
@@ -22,9 +22,9 @@ body {
 
 nav {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 10px;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -40,7 +40,8 @@ nav button {
     font-size: 16px;
     cursor: pointer;
     flex: 1;
-    max-width: 150px;
+    width: 100%
+    max-width: none;
     transition: background 0.3s ease;
     border-radius: 5px; 
 }
