--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 10px;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -39,9 +39,8 @@ nav button {
     padding: 10px 15px;
     font-size: 16px;
     cursor: pointer;
-    flex: 1;
-    width: 100%
-    max-width: none;
+    flex-grow: 1;
+    max-width: 100%;
     transition: background 0.3s ease;
     border-radius: 5px; 
 }
